--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,10 @@ td {
   background-color: white;
   border-radius: 4px;
 }
+.topdiv {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 30px;
+  padding-right: 30px;
+}
